--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -13,7 +13,7 @@
             <label for="void-id">Examiner ID:</label>
             <input type="text" placeholder="Examiner ID" id="void-id"/><br/>
             <label for="void-password">Password:</label>
-            <input type="text" placeholder="Password" id="void-password"/><br/>
+            <input type="password" placeholder="Password" id="void-password"/><br/>
             <input id="void-confirm" type="submit" value="Confirm" />
             <input id="void-cancel" type="button" value="Cancel" />
         }
