--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
@@ -16,7 +16,7 @@
         @Html.LabelFor(model => model.Description) <em>*</em>
     </div>
     <div class="editor-field">
-        @Html.TextAreaFor(model => model.Description)
+        @Html.EditorFor(model => model.Description)
     </div>
     <div class="clear"></div>
 
@@ -52,7 +52,7 @@
                 {
                     <tr>
                         <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.TextAreaFor(model => model.Answers[i].Description)</td>
+                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
                         <td class="delete-answer"><span>delete</span></td>
                     </tr>
                 }
@@ -63,7 +63,7 @@
                 {
                     <tr>
                         <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.TextAreaFor(model => model.Answers[i].Description)</td>
+                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
                         <td class="delete-answer"><span>delete</span></td>
                     </tr>
                 }
