--- a/APFTestingUI/Areas/Administration/Views/Home/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Home/Index.cshtml
@@ -5,16 +5,18 @@
 
 <h1>Temporary Administrator Home Page</h1>
 
-@Html.ActionLink("Manage Examiners", "Index", "Examiner")<br/><br/>
-
-@Html.ActionLink("Manage Theory Exam Formats", "Index", "TheoryFormat")<br/><br/>
-
-@Html.ActionLink("Manage Pilot Assessment Tasks", "Index", "AssessmentTask")<br/><br/>
-
-@Html.ActionLink("Manage Pilot Questions", "IndexPilot", "QuestionManagement")<br/><br/>
-
-@Html.ActionLink("Manage Packer Questions", "IndexPacker", "QuestionManagement")<br/><br/>
-
-@Html.ActionLink("Manage Pilot Practical Templates", "Index", "PracticalTemplatePilot")<br/><br/>
-
-@Html.ActionLink("Manage Packer Practical Templates", "Index", "PracticalTemplatePacker")<br/><br/>
+<div id="admin-menu">
+    @Html.ActionLink("Manage Examiners", "Index", "Examiner")<br/><br/>
+    
+    @Html.ActionLink("Manage Theory Exam Formats", "Index", "TheoryFormat")<br/><br/>
+    
+    @Html.ActionLink("Manage Pilot Questions", "IndexPilot", "QuestionManagement")<br/><br/>
+    
+    @Html.ActionLink("Manage Packer Questions", "IndexPacker", "QuestionManagement")<br/><br/>
+    
+    @Html.ActionLink("Manage Pilot Practical Templates", "Index", "PracticalTemplatePilot")<br/><br/>
+    
+    @Html.ActionLink("Manage Packer Practical Templates", "Index", "PracticalTemplatePacker")<br/><br/>
+    
+    @Html.ActionLink("Manage Pilot Assessment Tasks", "Index", "AssessmentTask")<br/><br/>
+</div>
