--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPacker.cshtml
@@ -14,13 +14,6 @@
     
     @Html.HiddenFor(model => model.Id);
     
-    <div class="editor-label">
-        @Html.LabelFor(model => model.IsActive) <em>*</em>
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.IsActive)
-    </div>
-    <div class="clear"></div>
     
     <div class="editor-label">
         @Html.LabelFor(model => model.Description) <em>*</em>
@@ -56,6 +49,16 @@
     </div>
     <div class="clear"></div>
     @Html.HiddenFor(model => model.ImagePath);
+    
+    
+    <div class="editor-label">
+        @Html.LabelFor(model => model.DeleteImage) <em>*</em>
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.DeleteImage)
+    </div>
+    <div class="clear"></div>
+    
     
     <span id="add-answer">Add</span>
     <table id="answers-table">
