--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
@@ -22,6 +22,7 @@
                 <tr>
                     <th>Activation</th>
                     <th>Description</th>
+                    <th>Edit</th>
                 </tr>
             </thead>
 
@@ -45,17 +46,22 @@
                             </a>
                         </td>
                         
+                       
+                        <td>
+                            @Html.ActionLink(question.Description, "DisplayPilot", new { questionId = question.Id })
+                        </td>
+
+
                         @if (question.editableOrDeletable)
                         {
                             <td>
-                                @Html.ActionLink(question.Description, "EditPilot", new { questionId = question.Id })
+                                @Html.ActionLink("Edit", "EditPilot", new { questionId = question.Id })
                             </td>
                         }
                         else
                         {
-                            <td>@question.Description</td>
-                        }
-                        
+                            <td>NOT EDITABLE</td>
+                        }   
                     </tr>
                 }
             </tbody>
