fixing headings and exminer deletion

--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.AssessmentTaskManagement.CreateAssessmentTask
 
 @{
-    ViewBag.Title = "Assessment Task Management - Create";
+    ViewBag.Title = "Create Assessment Task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create a new Pilot Practical Assessment Task </h2>
+<h1>Create a new Pilot Practical Assessment Task </h1>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
