--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.AssessmentTaskManagement.AssessmentTaskItem
 
 @{
-    ViewBag.Title = "Assessment Task Management - Details";
+    ViewBag.Title = "Assessment Task Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
