--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.AssessmentTaskManagement.EditAssessmentTask
 
 @{
-    ViewBag.Title = "Assessment Task Management - Edit";
+    ViewBag.Title = "Edit Assessment Task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit Pilot Practical Assessment Task Details</h2>
+<h1>Edit Pilot Practical Assessment Task Details</h1>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
