--- a/APFTestingUI/Areas/Administration/Views/Examiner/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.ExaminerManagement.CreateExaminer
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Examiner";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
