--- a/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.ExaminerManagement.EditExaminer
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Examiner";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
