--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePacker.Create
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Packer Practical Template";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h1>Create</h1>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
