--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePacker.Edit
 
 @{
-    ViewBag.Title = "Edit Packer Template";
+    ViewBag.Title = "Edit Packer Practical Template";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
