--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePacker.Index
 
 @{
-    ViewBag.Title = "Packer Practical Templates";
+    ViewBag.Title = "Packer Practical Template Management";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
