--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePilot.Edit
 
 @{
-    ViewBag.Title = "Edit Template";
+    ViewBag.Title = "Edit Pilot Practical Template";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
