--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePilot.Index
 
 @{
-    ViewBag.Title = "Pilot Practical Templates";
+    ViewBag.Title = "Pilot Practical Template Management";
     Layout = "~/Views/Shared/_Layout.cshtml";
     
 }
