--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.QuestionManagement.Create
 
 @{
-    ViewBag.Title = "CreatePilot";
+    ViewBag.Title = "Create Pilot Theory Question";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CreatePilot</h2>
+<h1>CreatePilot</h1>
 
 @using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
