--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.QuestionManagement.Display
 
 @{
-    ViewBag.Title = "DisplayPilot";
+    ViewBag.Title = "Pilot Theory Question Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>DisplayPilot</h2>
+<h1>DisplayPilot</h1>
 
 
 <div class="editor-label">
