--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.QuestionManagement.Edit
 
 @{
-    ViewBag.Title = "EditPilot";
+    ViewBag.Title = "Edit Pilot Theory Question";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>EditPilot</h2>
+<h1>EditPilot</h1>
 
 @using (Html.BeginForm("EditPilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
