--- a/APFTestingUI/Areas/Administration/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.ExaminerManagement.Index
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Examiner Management";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Examiner Management</h1>
+
+@Html.ValidationSummary(false)
 
 <style>
     #Examiner-List .Examiner-APFNumber {
