--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePilot.Create
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Pilot Practical Template";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
