--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Display.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Display.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.PracticalTemplatePilot.PilotTemplateDisplayItem
 
 @{
-    ViewBag.Title = "Pilot Practical Template";
+    ViewBag.Title = "Pilot Practical Template Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
