--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
@@ -1,11 +1,11 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.QuestionManagement.IndexPilot
 
 @{
-    ViewBag.Title = "IndexPilot";
+    ViewBag.Title = "Pilot Theory Question Management";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>IndexPilot</h2>
+<h1>IndexPilot</h1>
 
 <div>
     <a href='@Url.Action("CreatePilot")'>
