--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPacker.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>DisplayPacker</h1>
+<h1>Packer Question</h1>
 
 
 <div class="editor-label">
