--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPacker.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>IndexPacker</h1>
+<h1>Theory Questions - Packer</h1>
 
 <div>
     <a href='@Url.Action("CreatePacker")'>
