--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>CreatePilot</h1>
+<h1>Add Question - Pilot</h1>
 
 @using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -13,15 +13,15 @@
     @Html.AntiForgeryToken()
 
     <div class="editor-label">
-        @Html.LabelFor(model => model.Description) <em>*</em>
+        @Html.LabelFor(model => model.Description)
     </div>
     <div class="editor-field">
-        @Html.EditorFor(model => model.Description)
+        @Html.TextAreaFor(model => model.Description)
     </div>
     <div class="clear"></div>
 
     <div class="editor-label">
-        @Html.LabelFor(model => model.Category) <em>*</em>
+        @Html.LabelFor(model => model.Category)
     </div>
     <div class="editor-field">
         @Html.DropDownListFor(model => model.Category, Model.Categories)
@@ -29,14 +29,13 @@
     <div class="clear"></div>
     
     <div class="editor-label">
-        Image <em>*</em>
+        Image
     </div>
     <div class="editor-field">
         <input type="file" name="ImageFile" accept="image/*" />
     </div>
     <div class="clear"></div>
     
-    <span id="add-answer">Add</span>
     <table id="answers-table">
         <thead>
             <tr>
@@ -72,7 +71,10 @@
             
         </tbody>
     </table>
+    <span id="add-answer">+ Add another answer</span><br/><br/>
     
+    
+    @Html.ActionLink("Cancel", "IndexPilot", new { }, new { @class="form-button" })
     <input type="submit" value="Create" class="form-button" />
 }
 
