--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
@@ -5,8 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Add Question - Pilot</h1>
 
+<div id="manage-theory-question-wrap">
+<h1>Add Theory Question - Pilot</h1>
+
+<h2>Question Details</h2>
 @using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(false)
@@ -36,11 +39,14 @@
     </div>
     <div class="clear"></div>
     
+    <br />
+    <hr />
+    <h2>Possible Answers</h2>
     <table id="answers-table">
         <thead>
             <tr>
-                <th>Correct</th>
-                <th>Description</th>
+                <th class="th-correct-answer">Correct Answer(s)</th>
+                <th colspan="2">Answer Description</th>
             </tr>
         </thead>
 
@@ -50,7 +56,7 @@
                 for (int i = 0; i < 2; i++)
                 {
                     <tr>
-                        <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
+                        <td class="td-is-correct">@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
                         <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
                         <td class="delete-answer"><span>delete</span></td>
                     </tr>
@@ -61,7 +67,7 @@
                 for (int i = 0; i < Model.Answers.Count; i++)
                 {
                     <tr>
-                        <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
+                        <td class="td-is-correct">@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
                         <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
                         <td class="delete-answer"><span>delete</span></td>
                     </tr>
@@ -71,12 +77,16 @@
             
         </tbody>
     </table>
+    <br />
     <span id="add-answer">+ Add another answer</span><br/><br/>
     
     
+    <br />
+    <hr />
     @Html.ActionLink("Cancel", "IndexPilot", new { }, new { @class="form-button" })
     <input type="submit" value="Create" class="form-button" />
 }
+</div>
 
 
 @section scripts
