--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -5,7 +5,68 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit Question - Pilot</h1>
+<style>
+    #manage-theory-question-wrap h2
+    {
+        text-align:left;
+    }
+    
+    .th-correct-answer
+    {
+        width:180px;
+    }
+
+
+    #answers-table
+    {
+        width:100%;
+    }
+
+        #answers-table th
+        {
+            padding-bottom: 10px;
+            font-size: 1.2em;
+            font-weight:normal;
+        }
+
+        #answers-table td
+        {
+            vertical-align: middle;
+        }
+
+    #answers-table input[type="text"]
+    {
+        width:97%;
+        padding:3px 1%;
+    }
+
+        #answers-table .td-is-correct
+        {
+            padding-left:50px;
+        }
+
+        #answers-table td.delete-answer
+        {
+            width:120px;
+            color: #ff0000;
+        }
+    #add-answer
+    {
+        font-size: 1.2em;
+    }
+
+    input[type="submit"]
+    {
+        vertical-align: top;
+    }
+</style>
+
+
+<div id="manage-theory-question-wrap">
+
+<h1>Edit Theory Question - Pilot</h1>
+
+<h2>Question Details</h2>
 
 @using (Html.BeginForm("EditPilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -17,8 +78,8 @@
     <div class="editor-label">
         @Html.LabelFor(model => model.Description)
     </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Description)
+    <div class="editor-field editor-field-description">
+        @Html.TextAreaFor(model => model.Description)
     </div>
     <div class="clear"></div>
 
@@ -57,12 +118,14 @@
     </div>
     <div class="clear"></div>
     
-    
+    <br />
+    <hr />
+    <h2>Possible Answers</h2>
     <table id="answers-table">
         <thead>
             <tr>
-                <th>Correct</th>
-                <th>Description</th>
+                <th class="th-correct-answer">Correct Answer(s)</th>
+                <th colspan="2">Answer Description</th>
             </tr>
         </thead>
 
@@ -71,7 +134,7 @@
             {
                 
                 <tr>
-                    <td>
+                    <td class="td-is-correct">
                         @Html.HiddenFor(model => model.Answers[i].Id)
                         @Html.EditorFor(model => model.Answers[i].IsCorrect)
                     </td>
@@ -81,11 +144,20 @@
             }
         </tbody>
     </table>
+    
+    <br />
     <span id="add-answer">+ Add another answer</span><br/><br/>
     
+    
+    <br />
+    <hr />
     @Html.ActionLink("Cancel", "IndexPilot", new { }, new { @class="form-button" })
-    <input type="submit" value="Create" class="form-button" />
+    <input type="submit" value="Save" class="form-button" />
 }
+
+
+
+</div>
 
 @section scripts
 {
