--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
@@ -7,65 +7,66 @@
 
 
 <div id="manage-theory-question-wrap" class="details">
-<h1>Pilot Question</h1>
+    <h1>Pilot Question</h1>
+        
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Category) 
+    </div>
+    <div class="editor-field">
+        @Html.DisplayFor(model => model.Category)
+    </div>
+    <div class="clear"></div>
+    
+    <div class="editor-field question-title">
+        @Html.DisplayFor(model => model.Description)
+    </div>
+    <div class="clear"></div>
 
 
-<div class="editor-label">
-    @Html.LabelFor(model => model.Description)
-</div>
-<div class="editor-field">
-    @Html.DisplayFor(model => model.Description)
-</div>
-<div class="clear"></div>
-
-<div class="editor-label">
-    @Html.LabelFor(model => model.Category) 
-</div>
-<div class="editor-field">
-    @Html.DisplayFor(model => model.Category)
-</div>
-<div class="clear"></div>
    
 
-@{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
-@if (Model.ImagePath != null)
-{
-    <div>
-        <img src="@Url.Content(path)" alt="question image"/>
-    </div>
-}
-
-
-<div class="editor-label">
-    <h2 class="label">Possible Answers</h2>
-</div>
-<div class="editor-field">
+    @{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
+    @if (Model.ImagePath != null)
+    {
+        <div>
+            <img src="@Url.Content(path)" alt="question image"/>
+        </div>
+    }
     <table>
-    <thead>
-        <tr>
-            <th>Description</th>
-            <th class="th-correct-answer">Correct</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.Answers)
-        {
+        <thead>
             <tr>
-                <td>
-                    @answer.Description
-                </td>
-                @if (answer.IsCorrect)
-                {
-                    <td class="is-correct">Yes</td>
-                }
-                else
-                {
-                    <td class="is-incorrect">No</td>
-                }
+                <th>Correct</th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <ol>
+                @{ var listValue = 1;}
+                @foreach (var answer in Model.Answers)
+                {
+                    <tr>
+                        @if (answer.IsCorrect)
+                        {
+                            <td class="is-correct">Yes</td>
+                        }
+                        else
+                        {
+                            <td class="is-incorrect">No</td>
+                        }
+                        <td>
+                            <li value="@listValue">
+                                @answer.Description
+                            </li>
+                        </td>
+                    </tr>
+                    
+                    {
+                        listValue++;
+                    }
+                }
+            </ol>
+        </tbody>
+    </table>
 </div>
 
 
