--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
@@ -18,7 +18,7 @@
 
             <thead>
                 <tr>
-                    <th class="th-active">Activate</th>
+                    <th class="th-active">Status</th>
                     <th>Description</th>
                 </tr>
             </thead>
